--- a/django/sportsrec/templates/sportsrec/club_detail.html
+++ b/django/sportsrec/templates/sportsrec/club_detail.html
@@ -66,6 +66,26 @@
   </div>
   
   <div class="widget">
+    <div class="title">Club map</div>
+    <div id="map-canvas" style="width:100%;height:300px;"></div>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3key={AIzaSyAH5OCkIGApptBzMQGjs_Wlz8kc6xqTg8o}&sensor=false"></script>
+    <script>
+      var map;
+      function initialize() {
+        var mapOptions = {
+          zoom: 8,
+          center: new google.maps.LatLng(-34.397, 150.644),
+          mapTypeId: google.maps.MapTypeId.ROADMAP
+        };
+        map = new google.maps.Map(document.getElementById('map-canvas'),
+            mapOptions);
+      }
+
+      google.maps.event.addDomListener(window, 'load', initialize);
+    </script>
+  </div>
+
+  <div class="widget">
     <div class="large centre bold">
       <a href="{% url 'sportsrec:membership_apply' pk=club.id %}">
         Apply
@@ -73,4 +93,6 @@
       to this club!
     </div>
   </div>
+
+    
 {% endblock %}
