--- a/django/sportsrec/templates/sportsrec/club_detail.html
+++ b/django/sportsrec/templates/sportsrec/club_detail.html
@@ -70,15 +70,35 @@
     <div id="map-canvas" style="width:100%;height:300px;"></div>
     <script src="https://maps.googleapis.com/maps/api/js?v=3key={AIzaSyAH5OCkIGApptBzMQGjs_Wlz8kc6xqTg8o}&sensor=false"></script>
     <script>
+    	var geocoder;
       var map;
       function initialize() {
+      	geocoder = new google.maps.Geocoder();
+      	var latlng = new google.maps.LatLng(-31.9522, 115.8589);
         var mapOptions = {
           zoom: 8,
-          center: new google.maps.LatLng(-34.397, 150.644),
+          center: latlng,
           mapTypeId: google.maps.MapTypeId.ROADMAP
         };
         map = new google.maps.Map(document.getElementById('map-canvas'),
             mapOptions);
+      }
+      
+      function codeAddress() {
+      	var address = {{club.address}}
+      	geocoder.geocode( { {{club.address}} : address}, function(results, status) {
+      		if (status == google.maps.GeocoderStatus.OK) {
+      			map.setCenter(results[0].geometry.location);
+      			var marker = new google.maps.Marker({
+      				map: map;
+      				position: results[0].geometry.location
+      			});
+      		
+      		} else {
+      			alert('Geocoder was not successful for the following reason: ' + status);
+      		}
+      	});
+      }
       }
 
       google.maps.event.addDomListener(window, 'load', initialize);
