--- a/django/sportsrec/templates/sportsrec/user_club_list.html
+++ b/django/sportsrec/templates/sportsrec/user_club_list.html
@@ -27,7 +27,7 @@
     	<td>{{club.name}}</td>
       <td class="clickable menu-hilight">
           <a href="{% url 'sportsrec:club_edit' pk=club.id %}">
-          {{club.id}}
+          {{club}}
           </a>
       </td>
       <td class="clickable menu-hilight">
