beginnings of search
got the map working on club detail, and began working on search, but i
can't figure it all out :(

--- a/django/sportsrec/templates/sportsrec/base.html
+++ b/django/sportsrec/templates/sportsrec/base.html
@@ -53,7 +53,7 @@
           <ul>
             <li><a href="{% url 'sportsrec:index' %}">Home</a></li>
             <li><a href="{% url 'sportsrec:club_list' %}">Club list</a></li>
-            <li><a href="#">Club search</a></li>
+            <li><a href="{% url 'sportsrec:search' %}">Club search</a></li>
             {% block sidebar-user-menu %}
             {% endblock %}
             <li><a href="#">Statistics</a></li>
