--- a/django/sportsrec/templates/sportsrec/club_detail.html
+++ b/django/sportsrec/templates/sportsrec/club_detail.html
@@ -55,57 +55,24 @@
     </tr>
     <tr><th>Description</th><td class="break">{{club.description}}</td></tr>
   </table>
-
-  {% if club.owner.owner == user or admin %}
+  <br>
   <div class="large centre bold">
+    <a href="{% url 'sportsrec:club_member_list' pk=club.id %}">
+      List of Members
+    </a>
+  	  
+  {% if club.owner.owner == user or admin %}
+  |
     <a href="{% url 'sportsrec:club_edit' pk=club.id %}">
       Edit this club
     </a>
-  </div>
+  
   {% endif %}
   </div>
-  
-  <div class="widget">
-    <div class="title">Club map</div>
-    <div id="map-canvas" style="width:100%;height:300px;"></div>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3key={AIzaSyAH5OCkIGApptBzMQGjs_Wlz8kc6xqTg8o}&sensor=false"></script>
-    <script>
-    	var geocoder;
-      var map;
-      function initialize() {
-      	geocoder = new google.maps.Geocoder();
-      	var latlng = new google.maps.LatLng(-31.9522, 115.8589);
-        var mapOptions = {
-          zoom: 8,
-          center: latlng,
-          mapTypeId: google.maps.MapTypeId.ROADMAP
-        };
-        map = new google.maps.Map(document.getElementById('map-canvas'),
-            mapOptions);
-      }
-      
-      function codeAddress() {
-      	var address = {{club.address}}
-      	geocoder.geocode( { {{club.address}} : address}, function(results, status) {
-      		if (status == google.maps.GeocoderStatus.OK) {
-      			map.setCenter(results[0].geometry.location);
-      			var marker = new google.maps.Marker({
-      				map: map;
-      				position: results[0].geometry.location
-      			});
-      		
-      		} else {
-      			alert('Geocoder was not successful for the following reason: ' + status);
-      		}
-      	});
-      }
-      }
-
-      google.maps.event.addDomListener(window, 'load', initialize);
-    </script>
   </div>
-
-  <div class="widget">
+  
+  {% if club.recruiting %}
+    <div class="widget">
     <div class="large centre bold">
       <a href="{% url 'sportsrec:membership_apply' pk=club.id %}">
         Apply
@@ -113,6 +80,42 @@
       to this club!
     </div>
   </div>
+  {% endif %}
+  
+  <div class="widget">
+    <div class="title">Club map</div>
+    <div id="map-canvas" style="width:100%;height:300px;"></div>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3key={AIzaSyAH5OCkIGApptBzMQGjs_Wlz8kc6xqTg8o}&sensor=true"></script>
+    <script>
+      var map;
+      var geocoder;
+      function initialize() {
+      	geocoder = new google.maps.Geocoder();
+        var mapOptions = {
+          zoom: 12,
+          center: new google.maps.LatLng(-31.9522, 115.8589),
+          mapTypeId: google.maps.MapTypeId.ROADMAP
+        };
+        map = new google.maps.Map(document.getElementById('map-canvas'),mapOptions);
+    	geocoder.geocode( { 'address': "{{club.location}}"}, function(results, status) {
+            if (status == google.maps.GeocoderStatus.OK) {
+        		map.setCenter(results[0].geometry.location);
+        		var marker = new google.maps.Marker({
+           			map: map,
+            		position: results[0].geometry.location
+        		});
+      		} else {
+      			alert("Geocode was not successful for the following reason: " + status);
+  			}
+    	});
+    }
+    
+      google.maps.event.addDomListener(window, 'load', initialize);
+    </script>
+  </div>
+
+
+
 
     
 {% endblock %}
