Enable interactive geocode

--- a/django/sportsrec/templates/sportsrec/club_edit.html
+++ b/django/sportsrec/templates/sportsrec/club_edit.html
@@ -50,7 +50,7 @@
       return;
     }
     
-    //timeout = setTimeout(geolocate, 400);
+    timeout = setTimeout(geolocate, 400);
   });
 </script>
 {% endblock %}
