--- a/django/sportsrec/templates/sportsrec/club_detail.html
+++ b/django/sportsrec/templates/sportsrec/club_detail.html
@@ -100,22 +100,6 @@
       var map;
       var geocoder;
       
-      {% autoescape on%}
-      var infoHtml = 
-        '<div id="content">'+
-          '<h2 id="firstHeading" class="firstHeading">{{club.name|escapejs}}</h2>'+
-          '<div id="bodyContent">'+
-            '<p>Address: {{club.address|escapejs}}</p>' +
-            '<p>{{club.description|escapejs}}</p>' +
-          '</div>'+
-        '</div>';
-      
-      {% endautoescape %}
-      
-      var infoWindow = new google.maps.InfoWindow({
-        'content': infoHtml
-      });
-      
       function initialize() {
       	geocoder = new google.maps.Geocoder();
         var mapOptions = {
@@ -128,15 +112,37 @@
         {% if club.latitude and club.longitude %}
           var latlng = new google.maps.LatLng({{club.latitude}}, {{club.longitude}});
           map.setCenter(latlng);
-          var marker = new google.maps.Marker({
+          
+          var infoHtml;
+          {# Oh boy this is such a hack... #}
+          {% for near in nearby %}
+            latlng = new google.maps.LatLng({{near.latitude}}, {{near.longitude}});
+            var marker{{near.id}} = new google.maps.Marker({
                 map: map,
-                title : "Club: {{club.name|escapejs}}",
+                title : "Club: {{near.name|escapejs}}",
                 position: latlng
-          });
+            });
             
-          google.maps.event.addListener(marker, 'click', function() {
-            infoWindow.open(map,marker);
-          });
+            {% autoescape on%}
+              infoHtml = 
+                '<div id="content">'+
+                  '<h2 id="firstHeading" class="firstHeading">{{near.name|escapejs}}</h2>'+
+                  '<div id="bodyContent">'+
+                    '<p>Address: {{near.address|escapejs}}</p>' +
+                    '<p>{{near.description|escapejs}}</p>' +
+                  '</div>'+
+                '</div>';
+            {% endautoescape %}
+      
+            
+            var infoWindow{{near.id}} = new google.maps.InfoWindow({
+              'content': infoHtml
+            });
+            
+            google.maps.event.addListener(marker{{near.id}}, 'click', function() {
+              infoWindow{{near.id}}.open(map, marker{{near.id}});
+            });
+          {% endfor %} 
         {% endif %}
     }
     
