--- a/django/sportsrec/templates/sportsrec/search.html
+++ b/django/sportsrec/templates/sportsrec/search.html
@@ -4,9 +4,16 @@
 <div class="widget">
 	<div class="title centre">Search for a club by name:</div>
     <div class="large centre bold">
-      <input id="name" type="textbox" value="Sport Club" style="width:200px;">
+      <form action="{% url 'sportsrec:search_name' %}">
+      <p>
+      <input id="name" type="textbox" name="query" value="Sport Club" style="width:200px;">
       <input type="submit" value="Search">
+      </p>
     </div>
+</div>
+
+<div class="widget">
+	<div class="title centre">OR</div>
 </div>
 
 <div class="widget">
@@ -74,6 +81,10 @@
   		return deg * (Math.PI/180)
 	}
     </script>
+</div>
+
+<div class="widget">
+	<div class="title centre">OR</div>
 </div>
 
 <div class="widget">
