--- a/django/sportsrec/templates/sportsrec/search_location.html
+++ b/django/sportsrec/templates/sportsrec/search_location.html
@@ -1,21 +1,22 @@
 {% extends "sportsrec/base.html" %}
-{% with paginate_view='sportsrec:search_name' %}
+{% with paginate_view='sportsrec:search_location' %}
 
 {% block main %}
 <div class="widget">
-	<div class="title centre">Search for a club by name:</div>
+	
+	<div class="title centre">Search for a club by location:</div>
     <div class="large centre bold">
-      <form action="{% url 'sportsrec:search_name' %}">
+      <form action="{% url 'sportsrec:search_location' %}">
       <p>
-      <input id="name" type="textbox" name="query" value="{{query}}" style="width:200px;">
+      <input id="name" type="textbox" name="query" value="{{query}}" style="width:200px;" onclick="initialize()">
       <input type="submit" value="Search">
       </p>
     </div>
 </div>
 
 <div class="widget">
-  <div class="title centre">Search by name results:</div>
-  {% if search_name %}
+  <div class="title centre">Search by location results:</div>
+  {% if search_location %}
   {% include 'sportsrec/paginate.html' %}
   <table class="centre">
     <thead>
@@ -30,7 +31,7 @@
       </tr>
     </thead>
     <tbody>
-      {% for club in search_name %}
+      {% for club in search_location %}
       <tr>
         <td class="clickable menu-hilight">
           <a href="{% url 'sportsrec:club_detail' pk=club.id %}">
@@ -83,6 +84,171 @@
     Add a <a href="{% url 'sportsrec:club_add' %}">new club</a>.
   </div>
 </div>
+
+<div class="widget">
+<div class="title centre">Map:</div>
+<div id="map-canvas" style="width:100%;height:300px;"></div>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3key={AIzaSyAH5OCkIGApptBzMQGjs_Wlz8kc6xqTg8o}&sensor=true"></script>
+    <script>
+      var map;
+      var geocoder;
+      
+      function getInfo(name, address, description) {
+      return '<div id="content">'+
+                  '<h2 id="firstHeading" class="firstHeading">{{near.name|escapejs}}</h2>'+
+                  '<div id="bodyContent">'+
+                    '<p>Address: {{near.address|escapejs}}</p>' +
+                    '<p>{{near.description|escapejs}}</p>' +
+                  '</div>'+
+                '</div>';
+      }
+      
+      function initialize() {
+      	geocoder = new google.maps.Geocoder();
+        var mapOptions = {
+          zoom: 12,
+          center: new google.maps.LatLng(-31.9522, 115.8589),
+          mapTypeId: google.maps.MapTypeId.ROADMAP
+        };
+        map = new google.maps.Map(document.getElementById('map-canvas'),mapOptions);
+        var locations = {
+      		{% for club in search_location %}
+      		{% if club.latitude and club.longitude %}
+        		{{club.id}} : {
+        			name : "{{club.name|escapejs}}",
+      				lat : {{club.latitude}},
+      				lng : {{club.longitude}},
+      				description : "{{club.description|escapejs}}"
+      			},
+      		{% endif %}
+      		{% endfor %}
+      	};
+      	
+      	
+        
+        {% if club.latitude and club.longitude %}
+          var latlng = new google.maps.LatLng({{club.latitude}}, {{club.longitude}});
+          map.setCenter(latlng);
+          
+          var infoHtml;
+          {# Oh boy this is such a hack... #}
+          {% for near in nearby %}
+            latlng = new google.maps.LatLng({{near.latitude}}, {{near.longitude}});
+            var marker{{near.id}} = new google.maps.Marker({
+                map: map,
+                title : "Club: {{near.name|escapejs}}",
+                position: latlng
+            });
+            
+            {% autoescape on%}
+              infoHtml = 
+                '<div id="content">'+
+                  '<h2 id="firstHeading" class="firstHeading">{{near.name|escapejs}}</h2>'+
+                  '<div id="bodyContent">'+
+                    '<p>Address: {{near.address|escapejs}}</p>' +
+                    '<p>{{near.description|escapejs}}</p>' +
+                  '</div>'+
+                '</div>';
+            {% endautoescape %}
+      
+            
+            var infoWindow{{near.id}} = new google.maps.InfoWindow({
+              'content': infoHtml
+            });
+            
+            google.maps.event.addListener(marker{{near.id}}, 'click', function() {
+              infoWindow{{near.id}}.open(map, marker{{near.id}});
+            });
+          {% endfor %} 
+        {% endif %}
+    }
+    
+      google.maps.event.addDomListener(window, 'load', initialize);
+    </script>
+    
+<div id="map-canvas" style="width:100%;height:400px;"></div>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3key={AIzaSyAH5OCkIGApptBzMQGjs_Wlz8kc6xqTg8o}&sensor=true"></script>
+    <script>
+      var locations = {
+      {% for club in search_location %}
+      {% if club.latitude and club.longitude %}
+        {{club.id}} : {
+        name : "{{club.name|escapejs}}",
+      	lat : {{club.latitude}},
+      	lng : {{club.longitude}},
+      	description : "{{club.description|escapejs}}"
+      },
+      {% endif %}
+      {% endfor %}
+      }
+      var map;
+      var geocoder;
+      function initialize() {
+      	geocoder = new google.maps.Geocoder();
+      	var center = document.getElementById("name").value;
+      	var mapOptions = {
+          zoom: 12,
+          center: new google.maps.LatLng(-31.9522, 115.8589),
+          mapTypeId: google.maps.MapTypeId.ROADMAP
+        };
+      	geocoder.geocode( { 'address': center, 'region': 'AU' }, function(results, status) {
+          	  if (status == google.maps.GeocoderStatus.OK) {
+        			map.setCenter(results[0].geometry.location);
+        			/*var marker = new google.maps.Marker({
+           				map: map,
+           	 			position: results[0].geometry.location
+        			});*/
+        		}
+    		});
+        
+        /* want to put a marker down for all the clubs in the db
+        for (var club=1;club < numclubs; club++)
+        {
+        	var marker = new google.maps.Marker({
+        		map: map
+        		position: clubs[club].location
+        	});
+        }*/
+        map = new google.maps.Map(document.getElementById('map-canvas'),mapOptions);
+    }
+    
+    	function codeAddress() {
+    		var address = document.getElementById("name").value;
+    		geocoder.geocode( { 'address': address, 'region': 'AU'}, function(results, status) {
+          	  if (status == google.maps.GeocoderStatus.OK) {
+        			map.setCenter(results[0].geometry.location);
+        			var marker = new google.maps.Marker({
+           				map: map,
+           	 			position: results[0].geometry.location
+        			});
+        		} else {
+      				alert("Geocode was not successful for the following reason: " + status);
+  				}
+    		});
+    	}	
+    
+      google.maps.event.addDomListener(window, 'load', initialize);
+      
+      function getDistanceFromLatLonInKm(lat1,lon1,lat2,lon2) {
+      	var R = 6371; // Radius of the earth in km
+  		var dLat = deg2rad(lat2-lat1);  // deg2rad below
+  		var dLon = deg2rad(lon2-lon1); 
+  		var a = 
+  		Math.sin(dLat/2) * Math.sin(dLat/2) +
+  	  	Math.cos(deg2rad(lat1)) * Math.cos(deg2rad(lat2)) * 
+    	Math.sin(dLon/2) * Math.sin(dLon/2); 
+  		var c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1-a)); 
+  		var d = R * c; // Distance in km
+  		return d;
+	}
+
+	function deg2rad(deg) {
+  		return deg * (Math.PI/180)
+	}
+    </script>
+</div>
+</div>
+
 {% endblock %}
 
 {% endwith %}
