--- a/django/sportsrec/templates/sportsrec/search_location.html
+++ b/django/sportsrec/templates/sportsrec/search_location.html
@@ -87,7 +87,7 @@
 
 <div class="widget">
 <div class="title centre">Map:</div>
-<div id="map-canvas" style="width:100%;height:300px;"></div>
+<div id="map-canvas" style="width:100%;height:400px;"></div>
     <script src="https://maps.googleapis.com/maps/api/js?v=3key={AIzaSyAH5OCkIGApptBzMQGjs_Wlz8kc6xqTg8o}&sensor=true"></script>
     <script>
       var map;
@@ -130,6 +130,19 @@
           var latlng = new google.maps.LatLng({{club.latitude}}, {{club.longitude}});
           map.setCenter(latlng);
           
+          var circleOptions = {
+            	strokeColor: '#FF0000',
+      			strokeOpacity: 0.6,
+      			strokeWeight: 1.2,
+      			fillColor: '#FF0000',
+      			fillOpacity: 0.2,
+      			map: map,
+     			center: latlng,
+     			radius: 5000
+    		};
+    		// Add the circle for this radius to the map.
+    		clubRadius = new google.maps.Circle(circleOptions);
+          
           var infoHtml;
           {# Oh boy this is such a hack... #}
           {% for near in nearby %}
@@ -165,6 +178,12 @@
     
       google.maps.event.addDomListener(window, 'load', initialize);
     </script>
+    
+    
+    
+    <!-- Why do we have two map-canvas's defined in this html?? Is it breaking things? -->
+    
+    
     
 <div id="map-canvas" style="width:100%;height:400px;"></div>
     <script src="https://maps.googleapis.com/maps/api/js?v=3key={AIzaSyAH5OCkIGApptBzMQGjs_Wlz8kc6xqTg8o}&sensor=true"></script>
